--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- 引入默认样式 -->
     <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_3974850_ezpmvrtxe7p.css">
   </head>
   <body>
     <div id="app"></div>
